samples/_failures_safe/1761654766_6b902a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_244a9f9b.c: In function ‘matrix_determinant’:
./samples/SAFE/__tmp_244a9f9b.c:123:9: error: expected ‘,’ or ‘;’ at end of input
  123 |         double sign = (col % 2 == 0) ? 1.0 : -1.
      |         ^~~~~~
./samples/SAFE/__tmp_244a9f9b.c:123:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_244a9f9b.c:123:9: error: expected declaration or statement at end of input
